--- a/index.html
+++ b/index.html
@@ -56,15 +56,18 @@
                   <input type="search" id="form1" class="form-control" placeholder="ex. frontend developer" />
                 </div>
                 <button type="button" class="btn btn-primary">
-                  <i class="fas fa-search"></i>
+                  <a href="./index1.html" style="color: white;"><i class="fas fa-search"></i></a>
                 </button>
               </div>
         </div>
         <div class="righthalf col-6 col-md-6 p-0">
             <img src="assets/MainImage.png" class="image">
+            
         </div>
     </div>
+    
 </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
