--- a/index1.html
+++ b/index1.html
@@ -17,7 +17,7 @@
 <body>
     <div class="navbar navbar-expand-lg Navbar ">
         <div class="container-fluid">
-            <a class="navbar-brand text-light d-flex brand" href="#"><img src="assets/logo.png" class="logo"></a>
+            <a class="navbar-brand text-light d-flex brand" href="index.html"><img src="assets/logo.png" class="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -42,22 +42,56 @@
             </button>
         </div>
     </div>
-    <section class="container-2">
+    <section class="container-2 container-fluid md-justify-center mx-auto">
         <div class="section-2">
             <div class="location">
                 <h4>Preferred location for work</h4>
                 <div class="input-group">
-                    <div class="form-outline">
-                        <input type="search" id="form1" class="form-control" />
+                    <div class="form-outline" >
+                        <select name=statelist class="form-control1"style="width: 320px; height:40px; border-radius: 7px 0px 0px 7px; -webkit-appearance: none; padding-left:20px" >
+                            <option value=”Andhra Pradesh”>Andhra Pradesh</option>
+                            <option value=”Arunachal Pradesh”>Arunachal Pradesh</option>
+                            <option value=”Assam”>Assam</option>
+                            <option value=”Bihar”>Bihar</option>
+                            <option value=”Chandigarh”>Chandigarh</option>
+                            <option value=”Chhattisgarh”>Chhattisgarh</option>
+                            <option value=”Delhi”>Delhi</option>
+                            <option value=”Goa”>Goa</option>
+                            <option value=”Gujarat”>Gujarat</option>
+                            <option value=”Haryana”>Haryana</option>
+                            <option value=”Himachal Pradesh”>Himachal Pradesh</option>
+                            <option value=”Jammu and Kashmir”>Jammu and Kashmir</option>
+                            <option value=”Jharkhand”>Jharkhand</option>
+                            <option value=”Karnataka”>Karnataka</option>
+                            <option value=”Kerala”>Kerala</option>
+                            <option value=”Lakshadweep”>Lakshadweep</option>
+                            <option value=”Madhya Pradesh”>Madhya Pradesh</option>
+                            <option value=”Maharashtra”>Maharashtra</option>
+                            <option value=”Manipur”>Manipur</option>
+                            <option value=”Meghalaya”>Meghalaya</option>
+                            <option value=”Mizoram”>Mizoram</option>
+                            <option value=”Nagaland”>Nagaland</option>
+                            <option value=”Orissa”>Orissa</option>
+                            <option value=”Pondicherry”>Pondicherry</option>
+                            <option value=”Punjab”>Punjab</option>
+                            <option value=”Rajasthan”>Rajasthan</option>
+                            <option value=”Sikkim”>Sikkim</option>
+                            <option value=”Tamil Nadu”>Tamil Nadu</option>
+                            <option value=”Telangana”>Telangana</option>
+                            <option value=”Tripura”>Tripura</option>
+                            <option value=”Uttaranchal”>Uttaranchal</option>
+                            <option value=”Uttar Pradesh”>Uttar Pradesh</option>
+                            <option value=”West Bengal”>West Bengal</option>
+                            </select>
                     </div>
                     <button type="button" class="btn btn-primary">
-                        <i class="fas fa-search"></i>
+                        <i class="fas fa-angle-down"></i>
                     </button>
                 </div>
             </div>
 
             <div class="years_skills">
-                <div class="skills">
+                <!-- <div class="skills">
                     <h4><b>Skills</b>(select min 5)</h4>
                     <select class="form-select" aria-label="Default select example">
                         <option selected>Selects Your Skills</option>
@@ -67,6 +101,49 @@
                         <option value="4">JavaScript</option>
                         <option value="5">AJAX</option>
                     </select>
+                    <input type="checkbox">
+                    
+                </div> -->
+                <div class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton"
+                    data-mdb-toggle="dropdown" aria-expanded="false">
+                    Skills
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <li>
+                            <a class="dropdown-item" href="#">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="Checkme1" />
+                                    <label class="form-check-label" for="Checkme1">Check me</label>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="#">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="Checkme2" checked />
+                                    <label class="form-check-label" for="Checkme2">Check me</label>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="#">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="Checkme3" />
+                                    <label class="form-check-label" for="Checkme3">Check me</label>
+                                </div>
+                            </a>
+                        </li>
+                        <li><hr class="dropdown-divider" /></li>
+                        <li>
+                            <a class="dropdown-item" href="#">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="Checkme4" checked />
+                                    <label class="form-check-label" for="Checkme4">Check me</label>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
                 <div class="years">
                     <h4>Years of Exp.</h4>
@@ -81,16 +158,27 @@
                         <option value="7">7</option>
                         <option value="8">8</option>
                         <option value="9">9</option>
-                        <option value="10">10</option>
+                        <option value="10">10+</option>
                     </select>
                 </div>
             </div>
+            <button class="submit" id="submit">
+                Submit
+            </button>
         </div>
-        <div class="image1">
+        <div class="image1 d-none d-lg-block">
             <img src="assets/MainImage2.png" class="image" alt="">
         </div>
     </section>
-    <script src=""></script>
+    <script>
+        var submit = document.getElementById('submit');
+       
+        submit.addEventListener("click", function(){
+            myform.submit()
+        })
+        import * as mdb from 'mdb-ui-kit'; // lib
+import { Input } from 'mdb-ui-kit'; // module
+      </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
