--- a/index1.html
+++ b/index1.html
@@ -104,7 +104,7 @@
                     <input type="checkbox">
                     
                 </div> -->
-                <div class="dropdown">
+                <div class="dropdown skillsbtn " style="display: flex; justify-content: center; align-items: center;">
                     <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton"
                     data-mdb-toggle="dropdown" aria-expanded="false">
                     Skills
